force-app/main/default/objects/Compteur_Prime__c/Compteur_Prime__c.object-meta.xml
<CustomObject>
    <label>Compteur Prime</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Compteur Prime Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compteurs Prime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>