force-app/main/default/objects/Compteur_Prime__c/fields/Date_Demande__c.field-meta.xml
<CustomField>
    <fullName>Date_Demande__c</fullName>
    <description>Date d&#39;ouverture du plus vieux ticket de la queue</description>
    <label>Date Demande</label>
    <type>Date</type>
</CustomField>