force-app/main/default/objects/Compteur_Prime__c/fields/Date_du_jour__c.field-meta.xml
<CustomField>
    <fullName>Date_du_jour__c</fullName>
    <description>Date du jour du compteur</description>
    <label>Date du jour</label>
    <type>Date</type>
</CustomField>