force-app/main/default/objects/Compteur_Prime__c/fields/Delai__c.field-meta.xml
<CustomField>
    <fullName>Delai__c</fullName>
    <description>Nombre de jours ouvrés entre la date d&#39;ouverture du plus vieux ticket et la date du jour du compteur</description>
    <label>Delai</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>